@@ -17,7 +17,7 @@
 #define GLIB2_14_ENABLED 1
 
 /* Define to 1 if you have gpod support */
-/* #undef GPOD_ENABLED */
+#define GPOD_ENABLED 1
 
 /* Define to 1 if you have GTK 2.12 or higher */
 #define GTK2_12_ENABLED 1
@@ -56,7 +56,7 @@
 #define HAVE_MNTENT_H 1
 
 /* defined if you build the nautilus plugin */
-/* #undef HAVE_NAUTILUS */
+#define HAVE_NAUTILUS 1
 
 /* Define to 1 if you have the <stdint.h> header file. */
 #define HAVE_STDINT_H 1
@@ -80,7 +80,7 @@
 #define HAVE_UNISTD_H 1
 
 /* Define to 1 if you have musicbrainz3 support */
-/* #undef MUSICBRAINZ_ENABLED */
+#define MUSICBRAINZ_ENABLED 1
 
 /* Define to 1 if you have NOTIFY support */
 #define NOTIFY_ENABLED 1
@@ -119,4 +119,4 @@
 #define VERSION "0.9.9.2"
 
 /* When defined we have direct XScrnSaver control */
-/* #undef XSCRNSAVER_ENABLED */
+#define XSCRNSAVER_ENABLED 1
