@@ -1,4 +1,6 @@
 Development
+	Add some libs to the nautilus plugin compliation process
+	Set default value for embedded fonts
 	Fix bug #381 - Open does not activate on Enter in Open->Location
 	Resize controls slightly in fullscreen mode
 	Fullscreen controls in a floating widget
